--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <div align="left">
-                <a class="left-align-top" href="#">About</a>
-                <a class="left-align-top" href="#">Store</a>
-                <a class="right-align-top"href="#">Gmail</a>
-                <a class="right-align-top"href="#">Images</a>
-            </div>
-            </nav>
+        <header id="main-header">
+                <a  href="#">About</a>
+                <a  href="#">Store</a>
+                <a  href="#">Gmail</a>
+                <a  href="#">Images</a>
+                <img src="9dots.png">
+                <button class="signin" type="sign-in">Sign In</button>
         </header>
 <br>
 <br>
@@ -28,16 +26,29 @@
 <br>
 <br>
 <br>
-
+<main>
         <center><img id="logo" src="logo.png" alt="Google" height="92"></center>
         <br>
         <div class="container">
             
             <center>
-                <input type="text" id="search" name="search"> 
+                <input type="text" class="search-text" name="search"> 
                 <br>
-                <button type="button">Google Search</button><button type="button">I'm Feeling Lucky!</button>
+                <button type="button" class="search-button">Google Search</button><button type="button">I'm Feeling Lucky!</button>
             </center>
         </div>
+</main>
+
+<footer id="footer">
+    <a  href="#">Advertising</a>
+    <a  href="#">Business</a>
+    <a  href="#">How Search Works</a>
+    <img src="leaf.png"
+    <a  href="#">Carbon neutral since 2007</a>
+    <a  href="#">Privacy</a>
+    <a  href="#">Terms</a>
+    <a  href="#">Settings</a>
+
+</footer>
     </body>
 </html>
